# speech-vad-demo

./: .gitignore  CMakeLists.txt  build_and_run_64bit.bat
src/: com_baidu_speech_restapi_jniTest_FileCutUtil.c  com_baidu_speech_restapi_jniTest_FileCutUtil.h  dllmain.c  dllmain.h  file_cut.c  file_cut.h  period_format.c  simple_vad.c  stdafx.c  utils.c  utils.h
src_test/: tt.c
